# AR-test4

./: .gitignore  README.md  pyproject.toml
cnn/: cifar10.py  mnist.py
opencv/: cifar10.py  mnist.py
